# data_science

./: .gitignore
projects/2d_testing/: generate_data.py  make_plots.py  run.sh
projects/titanic/: explore.ipynb  explore.py  requirements.txt  setup
tan_ds/: .gitignore  README.md  setup.cfg  setup.py
