[aliases]
test = pytest

[bdist_wheel]
universal = 1

[coverage:run]
source = tan_ds

[metadata]
name = tan_ds
version = attr: tan_ds.__version__
license = GPL-3
author = Tanner Prestegard
author_email = tprestegard@gmail.com
description = Flexible and diverse package for data science
long_description = file:README.md
long_description_content_type = text/markdown
url = fakeurl
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Operating System :: POSIX
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.5
